# dsvn

./: .gitignore  ACCEPTANCE_TEST_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  CLAUDE.md  COMPARISON.md  Cargo.toml  DSVN_ARCHITECTURE_RECOMMENDATIONS.md  GIT_PERFORCE_COMPARISON.md  GIT_PERFORCE_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  Makefile  NESTED_DIRECTORY_SOLUTION.md  OVERVIEW.md  PERFORCE_ANALYSIS.md  PROTOCOL_VALIDATION_COMPLETE.md  QUICKSTART.md  README.md  ROADMAP.md  STATUS.md  STATUS_V2.md  SVN_PROTOCOL_REFERENCE.txt  SVN_VCC_DEBUG.md  SVN_VCC_FIX_ANALYSIS.md  TDD_FINAL_REPORT.md  TDD_IMPLEMENTATION_COMPLETE.md  TDD_PERSISTENT_STORAGE_PLAN.md  TDD_PLAN.md  TDD_SUMMARY.md  TESTING.md  rust_out  test_dump.sh
docs/: STORAGE_ARCHITECTURE_COMPARISON.md  sync-protocol.md
docs/archive/: MVP_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_TDD_COMPLETE.md  README_V2.md  SVN_PROPERTY_IMPLEMENTATION.md  SVN_WEBDAV_FIX_REPORT.md
docs/development/issues/: DEADLOCK_FIX.md  NESTED_DIRECTORY_ISSUE.md
docs/development/progress/: PROGRESS.md  PROJECT_SUMMARY.md
docs/development/tdd/: TDD_RESULTS.md
docs/migration/: DUMP_LOAD.md
docs/overview/: DEVELOPMENT.md
dsvn-admin-cli/: Cargo.toml
dsvn-admin-cli/src/: dump.rs  dump_format.rs  load.rs  main.rs  verify_mod.rs
dsvn-cli/: Cargo.toml
dsvn-cli/src/: load.rs
dsvn-core/: Cargo.toml
dsvn-core/src/: auth.rs  authz.rs  disk_repository.rs  hooks.rs  hot_store.rs  lib.rs  object.rs  packfile.rs  persistent.rs  persistent.rs.bak  persistent_tests.rs  persistent_v2.rs  properties.rs  replication.rs  repository.rs  sqlite_repository.rs  storage.rs  sync.rs
dsvn-core/tests/: README.md  persistent_repository_test.rs
dsvn-server/: Cargo.toml
dsvn-server/src/: main.rs
dsvn-webdav/: Cargo.toml
dsvn-webdav/src/: dump_handlers.rs  handlers.rs  lib.rs  proppatch.rs  repo_management.rs  sync_handlers.rs  xml.rs
dsvn-webdav/tests/: README.md  activity_test.rs  dump_load_test.rs  dump_perf_test.rs  handler_integration_test.rs  multi_repo_test.rs  protocol_compatibility_test.rs  report_handler_test.rs  sync_handler_test.rs
dsvnsync-cli/: Cargo.toml
dsvnsync-cli/src/: compat.rs  main.rs  protocol.rs  remote.rs  replication_log.rs  transfer.rs
examples/: authz.example  htpasswd.example
scripts/: PROTOCOL_TEST_PLAN.md  README.md  SUMMARY.md  SVN-GUIDE.md  TESTING-SYSTEM.md  acceptance-test.sh  debug-svn.py  gen-fixed-dump.py  gen-large-dump.py  init-large-repo-fast.sh  init-large-repo.sh  integration-test.sh  protocol-test.sh  protocol-validation.sh  quick-test.sh  test_migration.sh  test_mvp.sh
tests/: test_multi_repo.sh
