[workspace]
resolver = "2"
members = [
    "dsvn-core",
    "dsvn-webdav",
    "dsvn-server",
    "dsvn-admin-cli",
    "dsvnsync-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["DSvn Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/dsvn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# HTTP server
hyper = { version = "1.0", features = ["full"] }
hyper-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# TLS
rustls = "0.23"
rustls-pemfile = "2.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
bincode = "1.3"

# Compression
zstd = "0.13"
zstd-safe = "7.0"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Time
chrono = "0.4"

# Storage
fjall = "3.0"
sled = { version = "0.34", features = [] }
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.23"

# WebDAV/XML
quick-xml = "0.37"
bytes = "1.7"
http-body-util = "0.1"

# Utilities
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
