[package]
name = "dsvn-admin-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dsvn-admin"
path = "src/main.rs"

[dependencies]
# Core
dsvn-core = { path = "../dsvn-core" }

# Async
tokio = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Storage
rusqlite = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Configuration
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Dump format parsing
regex = "1.11"
chrono = { workspace = true }
uuid = { version = "1.10", features = ["v4"] }
