[package]
name = "dsvn-webdav"
version.workspace = true
edition.workspace = true

[dependencies]
# Core
dsvn-core = { path = "../dsvn-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# TLS
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
toml = "0.8"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
bytes = { workspace = true }
futures = { workspace = true }
http-body-util = "0.1"
lazy_static = "1.5"
chrono = { workspace = true }
uuid = { version = "1.10", features = ["v4"] }
base64 = "0.22"
md5 = "0.7"

[dev-dependencies]
regex = "1.10"
tempfile = "3.13"
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
